# youtube-mcp-server

./: .gitignore  BUG_FIX_SUMMARY.md  CLAUDE.md  CLAUDE_DESKTOP_CONFIG_ANALYSIS.md  DASHBOARD_ARTIFACT_SYSTEM.md  DOWNLOAD_FIXES_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  README.md  README_CLAUDE_DESKTOP.md  RESOURCE_INTEGRATION_SUMMARY.md  pyproject.toml  requirements.txt  test_all_fixes.py  test_dashboard_fix.py  test_dashboard_generation.py  test_fixes.py  test_frame_extraction.py  test_import_debug.py  test_integrated_video_analysis.py  test_resource_integration.py  test_resource_simple.py  test_server.py  test_video_downloader.py  youtube-analytics-mcp-design.md
dashboard_prompt_samples/: auto_dashboard_prompt.md  main_dashboard_prompt.md  sample_data.json
scripts/: run_server.py
src/: __init__.py  youtube_mcp_server.py
src/youtube_mcp_server/: __init__.py  __main__.py  __main__.py.backup
src/youtube_mcp_server/core/: __init__.py  config.py  exceptions.py  server.py
src/youtube_mcp_server/infrastructure/: __init__.py  cache_manager.py  error_handler.py  rate_limiter.py  resource_manager.py  retry_manager.py
src/youtube_mcp_server/models/: __init__.py  audio_models.py  audio_models.py.backup  content_analyzer.py  scene_detector.py  video_models.py
src/youtube_mcp_server/processors/: __init__.py  audio_processor.py  video_processor.py
src/youtube_mcp_server/prompts/: __init__.py  advanced_trimming_prompts.py  analysis_prompts.py  dashboard_prompts.py  video_frame_analysis_prompts.py  workflow_prompts.py
src/youtube_mcp_server/tools/: __init__.py  advanced_trimming.py  core_tools.py  creative_visualizations.py  frame_extractor.py  video_downloader.py  visualization_tools.py  youtube_api_client.py
